Finishing config files in order to kubertenes get all setup and running in minikube, with env variables and secrets for database, with local volumes

--- a/k8s/worker-deployment.yaml
+++ b/k8s/worker-deployment.yaml
@@ -11,6 +11,12 @@ spec:
     metadata:
       labels:
         component: worker
-    containers:
-      - name: worker
-        image: darking360/docker-complex-worker:latest
+    spec:
+      containers:
+        - name: worker
+          image: darking360/docker-complex-worker:latest
+          env:
+            - name: REDIS_HOST
+              value: redis-cluster-ip-service
+            - name: REDIS_PORT
+              value: '6379'
