--- a/k8s/server-deployment.yaml
+++ b/k8s/server-deployment.yaml
@@ -17,3 +17,21 @@ spec:
           image: darking360/docker-complex-server:latest
           ports:
             - containerPort: 5000
+          env:
+            - name: REDIS_HOST
+              value: redis-cluster-ip-service
+            - name: REDIS_PORT
+              value: '6379'
+            - name: PGHOST
+              value: postgres-cluster-ip-service
+            - name: PGUSER
+              value: 'postgres'
+            - name: PGPORT
+              value: '5432'
+            - name: PGDATABASE
+              value: 'postgres'
+            - name: PGPASSWORD
+              valueFrom: 
+                secretKeyRef:
+                  name: pgpassword
+                  key: PGPASSWORD
