Adding file to handle travis CI and deploy.sh script to deploy to Google Cloud

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,10 @@
 sudo: required
 services:
   - docker
+env:
+  global:
+    - SHA=$(git rev-parse HEAD)
+    - CLOUDSDK_CORE_DISABLE_PROMPTS=1
 before_install:
   - curl https://sdk.cloud.google.com | bash > dev/null;
   - source $HOME/google-cloud-sdk/path.bash.inc
@@ -14,3 +18,13 @@ before_install:
   - gcloud container clusters get-credentials # Name of the cluster
   # Docker part -------------------
   - echo $DOCKER_PASSWORD | docker login -u "$DOCKER_USERNAME" --password-stdin
+  - docker build -t darking360/docker-complex-k8s-test -f Dockerfile.dev ./client
+
+script: 
+  - docker run darking360/docker-complex-k8s-test npm run test -- --coverage
+
+deploy:
+  provider: script
+  script: bash ./deploy.sh
+  on:
+    branch: master
